--- a/app/views/operation/delivery/index.html.erb
+++ b/app/views/operation/delivery/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Ravitaillement du magasin </h2>
+<h2>Approvisionnement du magasin </h2>
 <h2><%="#{@deliveries.count} #{"résultat".pluralize(@deliveries.count)}"%></h2>
 
 <table>
