--- a/app/views/operation/delivery/new.html.erb
+++ b/app/views/operation/delivery/new.html.erb
@@ -34,7 +34,7 @@
 	</tr>
 	
 	<tr>
-		<td><label for="deliv_date">Date</label></td><td><%=date_field 'delivery','date'%></td>
+		<td><label for="deliv_date">Date</label></td><td><%=date_select 'delivery','date'%></td>
 	</tr>
 	
 	<tr>
