--- a/app/views/admin/item/new.html.erb
+++ b/app/views/admin/item/new.html.erb
@@ -21,7 +21,8 @@
 	</tr>
 
 	<tr>
-		<td><label for="item_unit">Unité de mesure</label></td><td> <%=text_field 'item','unit',:placeholder=>"Ex: pièce/boîte"%></td>
+		<td><label for="item_unit">Unité de mesure</label></td>
+		<td> <%=text_field 'item','unit',:placeholder=>"Ex: pièce/boîte"%></td>
 	</tr>
 	<tr>
 		<td></td><td><%=submit_tag "Ajouter", class:'link'%></td>
